compiler/src/ts/generated/BasicTypescriptParser.ts
// Generated from src/g4/BasicTypescript.g4 by ANTLR 4.13.1
// noinspection ES6UnusedImports,JSUnusedGlobalSymbols,JSUnusedLocalSymbols

import {
	ATN,
	ATNDeserializer, DecisionState, DFA, FailedPredicateException,
	RecognitionException, NoViableAltException, BailErrorStrategy,
	Parser, ParserATNSimulator,
	RuleContext, ParserRuleContext, PredictionMode, PredictionContextCache,
	TerminalNode, RuleNode,
	Token, TokenStream,
	Interval, IntervalSet
} from 'antlr4';
import BasicTypescriptListener from "./BasicTypescriptListener.js";
import BasicTypescriptVisitor from "./BasicTypescriptVisitor.js";

// for running tests with parameters, TODO: discuss strategy for typed parameters in CI
// eslint-disable-next-line no-unused-vars
type int = number;

export default class BasicTypescriptParser extends Parser {
	public static readonly T__0 = 1;
	public static readonly T__1 = 2;
	public static readonly T__2 = 3;
	public static readonly T__3 = 4;
	public static readonly T__4 = 5;
	public static readonly T__5 = 6;
	public static readonly T__6 = 7;
	public static readonly T__7 = 8;
	public static readonly T__8 = 9;
	public static readonly T__9 = 10;
	public static readonly T__10 = 11;
	public static readonly T__11 = 12;
	public static readonly T__12 = 13;
	public static readonly T__13 = 14;
	public static readonly T__14 = 15;
	public static readonly T__15 = 16;
	public static readonly T__16 = 17;
	public static readonly T__17 = 18;
	public static readonly T__18 = 19;
	public static readonly T__19 = 20;
	public static readonly T__20 = 21;
	public static readonly T__21 = 22;
	public static readonly T__22 = 23;
	public static readonly T__23 = 24;
	public static readonly ID = 25;
	public static readonly NUMBER = 26;
	public static readonly STRING = 27;
	public static readonly BOOLEAN = 28;
	public static readonly WS = 29;
	public static readonly EOF = Token.EOF;
	public static readonly RULE_root = 0;
	public static readonly RULE_basicTypescript = 1;
	public static readonly RULE_importStatement = 2;
	public static readonly RULE_functionDeclaration = 3;
	public static readonly RULE_parameters = 4;
	public static readonly RULE_parameter = 5;
	public static readonly RULE_valueType = 6;
	public static readonly RULE_functionCall = 7;
	public static readonly RULE_arguments = 8;
	public static readonly RULE_type = 9;
	public static readonly RULE_functionVar = 10;
	public static readonly RULE_objectAttributes = 11;
	public static readonly RULE_expression = 12;
	public static readonly RULE_htmlElement = 13;
	public static readonly RULE_openingTag = 14;
	public static readonly RULE_closingTag = 15;
	public static readonly RULE_statement = 16;
	public static readonly RULE_var = 17;
	public static readonly RULE_returnStatement = 18;
	public static readonly literalNames: (string | null)[] = [ null, "'import'", 
                                                            "'*'", "'as'", 
                                                            "'from'", "'function'", 
                                                            "'('", "')'", 
                                                            "'{'", "'}'", 
                                                            "','", "':'", 
                                                            "'string'", 
                                                            "'number'", 
                                                            "'boolean'", 
                                                            "'HTMLElement'", 
                                                            "'.'", "'='", 
                                                            "'<'", "'>'", 
                                                            "'</'", "'let'", 
                                                            "'var'", "'const'", 
                                                            "'return'" ];
	public static readonly symbolicNames: (string | null)[] = [ null, null, 
                                                             null, null, 
                                                             null, null, 
                                                             null, null, 
                                                             null, null, 
                                                             null, null, 
                                                             null, null, 
                                                             null, null, 
                                                             null, null, 
                                                             null, null, 
                                                             null, null, 
                                                             null, null, 
                                                             null, "ID", 
                                                             "NUMBER", "STRING", 
                                                             "BOOLEAN", 
                                                             "WS" ];
	// tslint:disable:no-trailing-whitespace
	public static readonly ruleNames: string[] = [
		"root", "basicTypescript", "importStatement", "functionDeclaration", "parameters", 
		"parameter", "valueType", "functionCall", "arguments", "type", "functionVar", 
		"objectAttributes", "expression", "htmlElement", "openingTag", "closingTag", 
		"statement", "var", "returnStatement",
	];
	public get grammarFileName(): string { return "BasicTypescript.g4"; }
	public get literalNames(): (string | null)[] { return BasicTypescriptParser.literalNames; }
	public get symbolicNames(): (string | null)[] { return BasicTypescriptParser.symbolicNames; }
	public get ruleNames(): string[] { return BasicTypescriptParser.ruleNames; }
	public get serializedATN(): number[] { return BasicTypescriptParser._serializedATN; }

	protected createFailedPredicateException(predicate?: string, message?: string): FailedPredicateException {
		return new FailedPredicateException(this, predicate, message);
	}

	constructor(input: TokenStream) {
		super(input);
		this._interp = new ParserATNSimulator(this, BasicTypescriptParser._ATN, BasicTypescriptParser.DecisionsToDFA, new PredictionContextCache());
	}
	// @RuleVersion(0)
	public root(): RootContext {
		let localctx: RootContext = new RootContext(this, this._ctx, this.state);
		this.enterRule(localctx, 0, BasicTypescriptParser.RULE_root);
		let _la: number;
		try {
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 39;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			do {
				{
				{
				this.state = 38;
				this.basicTypescript();
				}
				}
				this.state = 41;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
			} while ((((_la) & ~0x1F) === 0 && ((1 << _la) & 65273890) !== 0));
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public basicTypescript(): BasicTypescriptContext {
		let localctx: BasicTypescriptContext = new BasicTypescriptContext(this, this._ctx, this.state);
		this.enterRule(localctx, 2, BasicTypescriptParser.RULE_basicTypescript);
		try {
			this.state = 50;
			this._errHandler.sync(this);
			switch ( this._interp.adaptivePredict(this._input, 1, this._ctx) ) {
			case 1:
				this.enterOuterAlt(localctx, 1);
				{
				this.state = 43;
				this.importStatement();
				}
				break;
			case 2:
				this.enterOuterAlt(localctx, 2);
				{
				this.state = 44;
				this.functionDeclaration();
				}
				break;
			case 3:
				this.enterOuterAlt(localctx, 3);
				{
				this.state = 45;
				this.functionCall();
				}
				break;
			case 4:
				this.enterOuterAlt(localctx, 4);
				{
				this.state = 46;
				this.functionVar();
				}
				break;
			case 5:
				this.enterOuterAlt(localctx, 5);
				{
				this.state = 47;
				this.statement();
				}
				break;
			case 6:
				this.enterOuterAlt(localctx, 6);
				{
				this.state = 48;
				this.htmlElement();
				}
				break;
			case 7:
				this.enterOuterAlt(localctx, 7);
				{
				this.state = 49;
				this.returnStatement();
				}
				break;
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public importStatement(): ImportStatementContext {
		let localctx: ImportStatementContext = new ImportStatementContext(this, this._ctx, this.state);
		this.enterRule(localctx, 4, BasicTypescriptParser.RULE_importStatement);
		try {
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 52;
			this.match(BasicTypescriptParser.T__0);
			this.state = 53;
			this.match(BasicTypescriptParser.T__1);
			this.state = 54;
			this.match(BasicTypescriptParser.T__2);
			this.state = 55;
			this.match(BasicTypescriptParser.ID);
			this.state = 56;
			this.match(BasicTypescriptParser.T__3);
			this.state = 57;
			this.match(BasicTypescriptParser.STRING);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public functionDeclaration(): FunctionDeclarationContext {
		let localctx: FunctionDeclarationContext = new FunctionDeclarationContext(this, this._ctx, this.state);
		this.enterRule(localctx, 6, BasicTypescriptParser.RULE_functionDeclaration);
		let _la: number;
		try {
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 59;
			this.match(BasicTypescriptParser.T__4);
			this.state = 60;
			this.match(BasicTypescriptParser.ID);
			this.state = 61;
			this.match(BasicTypescriptParser.T__5);
			this.state = 63;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			if (_la===25) {
				{
				this.state = 62;
				this.parameters();
				}
			}

			this.state = 65;
			this.match(BasicTypescriptParser.T__6);
			this.state = 66;
			this.match(BasicTypescriptParser.T__7);
			this.state = 68;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			do {
				{
				{
				this.state = 67;
				this.basicTypescript();
				}
				}
				this.state = 70;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
			} while ((((_la) & ~0x1F) === 0 && ((1 << _la) & 65273890) !== 0));
			this.state = 72;
			this.match(BasicTypescriptParser.T__8);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public parameters(): ParametersContext {
		let localctx: ParametersContext = new ParametersContext(this, this._ctx, this.state);
		this.enterRule(localctx, 8, BasicTypescriptParser.RULE_parameters);
		let _la: number;
		try {
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 74;
			this.parameter();
			this.state = 77;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			if (_la===10) {
				{
				this.state = 75;
				this.match(BasicTypescriptParser.T__9);
				this.state = 76;
				this.parameter();
				}
			}

			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public parameter(): ParameterContext {
		let localctx: ParameterContext = new ParameterContext(this, this._ctx, this.state);
		this.enterRule(localctx, 10, BasicTypescriptParser.RULE_parameter);
		try {
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 79;
			this.match(BasicTypescriptParser.ID);
			this.state = 80;
			this.match(BasicTypescriptParser.T__10);
			this.state = 81;
			this.valueType();
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public valueType(): ValueTypeContext {
		let localctx: ValueTypeContext = new ValueTypeContext(this, this._ctx, this.state);
		this.enterRule(localctx, 12, BasicTypescriptParser.RULE_valueType);
		let _la: number;
		try {
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 83;
			_la = this._input.LA(1);
			if(!((((_la) & ~0x1F) === 0 && ((1 << _la) & 61440) !== 0))) {
			this._errHandler.recoverInline(this);
			}
			else {
				this._errHandler.reportMatch(this);
			    this.consume();
			}
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public functionCall(): FunctionCallContext {
		let localctx: FunctionCallContext = new FunctionCallContext(this, this._ctx, this.state);
		this.enterRule(localctx, 14, BasicTypescriptParser.RULE_functionCall);
		let _la: number;
		try {
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 87;
			this._errHandler.sync(this);
			switch ( this._interp.adaptivePredict(this._input, 5, this._ctx) ) {
			case 1:
				{
				this.state = 85;
				this.match(BasicTypescriptParser.ID);
				this.state = 86;
				this.match(BasicTypescriptParser.T__15);
				}
				break;
			}
			this.state = 89;
			this.match(BasicTypescriptParser.ID);
			this.state = 90;
			this.match(BasicTypescriptParser.T__5);
			this.state = 92;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			if ((((_la) & ~0x1F) === 0 && ((1 << _la) & 503316480) !== 0)) {
				{
				this.state = 91;
				this.arguments();
				}
			}

			this.state = 94;
			this.match(BasicTypescriptParser.T__6);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public arguments(): ArgumentsContext {
		let localctx: ArgumentsContext = new ArgumentsContext(this, this._ctx, this.state);
		this.enterRule(localctx, 16, BasicTypescriptParser.RULE_arguments);
		let _la: number;
		try {
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 98;
			this._errHandler.sync(this);
			switch (this._input.LA(1)) {
			case 26:
			case 27:
			case 28:
				{
				this.state = 96;
				this.type_();
				}
				break;
			case 25:
				{
				this.state = 97;
				this.match(BasicTypescriptParser.ID);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			this.state = 107;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			while (_la===10) {
				{
				{
				this.state = 100;
				this.match(BasicTypescriptParser.T__9);
				this.state = 103;
				this._errHandler.sync(this);
				switch (this._input.LA(1)) {
				case 26:
				case 27:
				case 28:
					{
					this.state = 101;
					this.type_();
					}
					break;
				case 25:
					{
					this.state = 102;
					this.match(BasicTypescriptParser.ID);
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				}
				this.state = 109;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
			}
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public type_(): TypeContext {
		let localctx: TypeContext = new TypeContext(this, this._ctx, this.state);
		this.enterRule(localctx, 18, BasicTypescriptParser.RULE_type);
		let _la: number;
		try {
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 110;
			_la = this._input.LA(1);
			if(!((((_la) & ~0x1F) === 0 && ((1 << _la) & 469762048) !== 0))) {
			this._errHandler.recoverInline(this);
			}
			else {
				this._errHandler.reportMatch(this);
			    this.consume();
			}
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public functionVar(): FunctionVarContext {
		let localctx: FunctionVarContext = new FunctionVarContext(this, this._ctx, this.state);
		this.enterRule(localctx, 20, BasicTypescriptParser.RULE_functionVar);
		try {
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 114;
			this._errHandler.sync(this);
			switch ( this._interp.adaptivePredict(this._input, 10, this._ctx) ) {
			case 1:
				{
				this.state = 112;
				this.objectAttributes();
				}
				break;
			case 2:
				{
				this.state = 113;
				this.match(BasicTypescriptParser.ID);
				}
				break;
			}
			this.state = 116;
			this.match(BasicTypescriptParser.T__16);
			this.state = 119;
			this._errHandler.sync(this);
			switch ( this._interp.adaptivePredict(this._input, 11, this._ctx) ) {
			case 1:
				{
				this.state = 117;
				this.expression();
				}
				break;
			case 2:
				{
				this.state = 118;
				this.functionCall();
				}
				break;
			}
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public objectAttributes(): ObjectAttributesContext {
		let localctx: ObjectAttributesContext = new ObjectAttributesContext(this, this._ctx, this.state);
		this.enterRule(localctx, 22, BasicTypescriptParser.RULE_objectAttributes);
		let _la: number;
		try {
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 121;
			this.match(BasicTypescriptParser.ID);
			this.state = 126;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			while (_la===16) {
				{
				{
				this.state = 122;
				this.match(BasicTypescriptParser.T__15);
				this.state = 123;
				this.match(BasicTypescriptParser.ID);
				}
				}
				this.state = 128;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
			}
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public expression(): ExpressionContext {
		let localctx: ExpressionContext = new ExpressionContext(this, this._ctx, this.state);
		this.enterRule(localctx, 24, BasicTypescriptParser.RULE_expression);
		try {
			this.state = 136;
			this._errHandler.sync(this);
			switch ( this._interp.adaptivePredict(this._input, 13, this._ctx) ) {
			case 1:
				this.enterOuterAlt(localctx, 1);
				{
				this.state = 129;
				this.match(BasicTypescriptParser.ID);
				}
				break;
			case 2:
				this.enterOuterAlt(localctx, 2);
				{
				this.state = 130;
				this.type_();
				}
				break;
			case 3:
				this.enterOuterAlt(localctx, 3);
				{
				this.state = 131;
				this.objectAttributes();
				}
				break;
			case 4:
				this.enterOuterAlt(localctx, 4);
				{
				this.state = 132;
				this.match(BasicTypescriptParser.T__5);
				this.state = 133;
				this.htmlElement();
				this.state = 134;
				this.match(BasicTypescriptParser.T__6);
				}
				break;
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public htmlElement(): HtmlElementContext {
		let localctx: HtmlElementContext = new HtmlElementContext(this, this._ctx, this.state);
		this.enterRule(localctx, 26, BasicTypescriptParser.RULE_htmlElement);
		let _la: number;
		try {
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 138;
			this.openingTag();
			this.state = 143;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			while (_la===18 || _la===25) {
				{
				this.state = 141;
				this._errHandler.sync(this);
				switch (this._input.LA(1)) {
				case 25:
					{
					this.state = 139;
					this.match(BasicTypescriptParser.ID);
					}
					break;
				case 18:
					{
					this.state = 140;
					this.htmlElement();
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				this.state = 145;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
			}
			this.state = 146;
			this.closingTag();
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public openingTag(): OpeningTagContext {
		let localctx: OpeningTagContext = new OpeningTagContext(this, this._ctx, this.state);
		this.enterRule(localctx, 28, BasicTypescriptParser.RULE_openingTag);
		try {
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 148;
			this.match(BasicTypescriptParser.T__17);
			this.state = 149;
			this.match(BasicTypescriptParser.ID);
			this.state = 150;
			this.match(BasicTypescriptParser.T__18);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public closingTag(): ClosingTagContext {
		let localctx: ClosingTagContext = new ClosingTagContext(this, this._ctx, this.state);
		this.enterRule(localctx, 30, BasicTypescriptParser.RULE_closingTag);
		try {
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 152;
			this.match(BasicTypescriptParser.T__19);
			this.state = 153;
			this.match(BasicTypescriptParser.ID);
			this.state = 154;
			this.match(BasicTypescriptParser.T__18);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public statement(): StatementContext {
		let localctx: StatementContext = new StatementContext(this, this._ctx, this.state);
		this.enterRule(localctx, 32, BasicTypescriptParser.RULE_statement);
		let _la: number;
		try {
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 156;
			this.var_();
			this.state = 157;
			this.match(BasicTypescriptParser.ID);
			this.state = 160;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			if (_la===11) {
				{
				this.state = 158;
				this.match(BasicTypescriptParser.T__10);
				this.state = 159;
				this.valueType();
				}
			}

			this.state = 162;
			this.match(BasicTypescriptParser.T__16);
			this.state = 170;
			this._errHandler.sync(this);
			switch ( this._interp.adaptivePredict(this._input, 17, this._ctx) ) {
			case 1:
				{
				this.state = 163;
				this.match(BasicTypescriptParser.ID);
				}
				break;
			case 2:
				{
				this.state = 164;
				this.type_();
				}
				break;
			case 3:
				{
				this.state = 165;
				this.functionCall();
				}
				break;
			case 4:
				{
				this.state = 166;
				this.match(BasicTypescriptParser.T__5);
				this.state = 167;
				this.htmlElement();
				this.state = 168;
				this.match(BasicTypescriptParser.T__6);
				}
				break;
			}
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public var_(): VarContext {
		let localctx: VarContext = new VarContext(this, this._ctx, this.state);
		this.enterRule(localctx, 34, BasicTypescriptParser.RULE_var);
		let _la: number;
		try {
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 172;
			_la = this._input.LA(1);
			if(!((((_la) & ~0x1F) === 0 && ((1 << _la) & 14680064) !== 0))) {
			this._errHandler.recoverInline(this);
			}
			else {
				this._errHandler.reportMatch(this);
			    this.consume();
			}
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public returnStatement(): ReturnStatementContext {
		let localctx: ReturnStatementContext = new ReturnStatementContext(this, this._ctx, this.state);
		this.enterRule(localctx, 36, BasicTypescriptParser.RULE_returnStatement);
		try {
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 174;
			this.match(BasicTypescriptParser.T__23);
			this.state = 177;
			this._errHandler.sync(this);
			switch ( this._interp.adaptivePredict(this._input, 18, this._ctx) ) {
			case 1:
				{
				this.state = 175;
				this.expression();
				}
				break;
			case 2:
				{
				this.state = 176;
				this.functionCall();
				}
				break;
			}
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}


	private static __ATN: ATN;
	public static get _ATN(): ATN {
		if (!BasicTypescriptParser.__ATN) {
			BasicTypescriptParser.__ATN = new ATNDeserializer().deserialize(BasicTypescriptParser._serializedATN);
		}

		return BasicTypescriptParser.__ATN;
	}


	static DecisionsToDFA = BasicTypescriptParser._ATN.decisionToState.map( (ds: DecisionState, index: number) => new DFA(ds, index) );

}

export class RootContext extends ParserRuleContext {
	constructor(parser?: BasicTypescriptParser, parent?: ParserRuleContext, invokingState?: number) {
		super(parent, invokingState);
    	this.parser = parser;
	}
	public basicTypescript_list(): BasicTypescriptContext[] {
		return this.getTypedRuleContexts(BasicTypescriptContext) as BasicTypescriptContext[];
	}
	public basicTypescript(i: number): BasicTypescriptContext {
		return this.getTypedRuleContext(BasicTypescriptContext, i) as BasicTypescriptContext;
	}
    public get ruleIndex(): number {
    	return BasicTypescriptParser.RULE_root;
	}
	public enterRule(listener: BasicTypescriptListener): void {
	    if(listener.enterRoot) {
	 		listener.enterRoot(this);
		}
	}
	public exitRule(listener: BasicTypescriptListener): void {
	    if(listener.exitRoot) {
	 		listener.exitRoot(this);
		}
	}
	// @Override
	public accept<Result>(visitor: BasicTypescriptVisitor<Result>): Result {
		if (visitor.visitRoot) {
			return visitor.visitRoot(this);
		} else {
			return visitor.visitChildren(this);
		}
	}
}


export class BasicTypescriptContext extends ParserRuleContext {
	constructor(parser?: BasicTypescriptParser, parent?: ParserRuleContext, invokingState?: number) {
		super(parent, invokingState);
    	this.parser = parser;
	}
	public importStatement(): ImportStatementContext {
		return this.getTypedRuleContext(ImportStatementContext, 0) as ImportStatementContext;
	}
	public functionDeclaration(): FunctionDeclarationContext {
		return this.getTypedRuleContext(FunctionDeclarationContext, 0) as FunctionDeclarationContext;
	}
	public functionCall(): FunctionCallContext {
		return this.getTypedRuleContext(FunctionCallContext, 0) as FunctionCallContext;
	}
	public functionVar(): FunctionVarContext {
		return this.getTypedRuleContext(FunctionVarContext, 0) as FunctionVarContext;
	}
	public statement(): StatementContext {
		return this.getTypedRuleContext(StatementContext, 0) as StatementContext;
	}
	public htmlElement(): HtmlElementContext {
		return this.getTypedRuleContext(HtmlElementContext, 0) as HtmlElementContext;
	}
	public returnStatement(): ReturnStatementContext {
		return this.getTypedRuleContext(ReturnStatementContext, 0) as ReturnStatementContext;
	}
    public get ruleIndex(): number {
    	return BasicTypescriptParser.RULE_basicTypescript;
	}
	public enterRule(listener: BasicTypescriptListener): void {
	    if(listener.enterBasicTypescript) {
	 		listener.enterBasicTypescript(this);
		}
	}
	public exitRule(listener: BasicTypescriptListener): void {
	    if(listener.exitBasicTypescript) {
	 		listener.exitBasicTypescript(this);
		}
	}
	// @Override
	public accept<Result>(visitor: BasicTypescriptVisitor<Result>): Result {
		if (visitor.visitBasicTypescript) {
			return visitor.visitBasicTypescript(this);
		} else {
			return visitor.visitChildren(this);
		}
	}
}


export class ImportStatementContext extends ParserRuleContext {
	constructor(parser?: BasicTypescriptParser, parent?: ParserRuleContext, invokingState?: number) {
		super(parent, invokingState);
    	this.parser = parser;
	}
	public ID(): TerminalNode {
		return this.getToken(BasicTypescriptParser.ID, 0);
	}
	public STRING(): TerminalNode {
		return this.getToken(BasicTypescriptParser.STRING, 0);
	}
    public get ruleIndex(): number {
    	return BasicTypescriptParser.RULE_importStatement;
	}
	public enterRule(listener: BasicTypescriptListener): void {
	    if(listener.enterImportStatement) {
	 		listener.enterImportStatement(this);
		}
	}
	public exitRule(listener: BasicTypescriptListener): void {
	    if(listener.exitImportStatement) {
	 		listener.exitImportStatement(this);
		}
	}
	// @Override
	public accept<Result>(visitor: BasicTypescriptVisitor<Result>): Result {
		if (visitor.visitImportStatement) {
			return visitor.visitImportStatement(this);
		} else {
			return visitor.visitChildren(this);
		}
	}
}


export class FunctionDeclarationContext extends ParserRuleContext {
	constructor(parser?: BasicTypescriptParser, parent?: ParserRuleContext, invokingState?: number) {
		super(parent, invokingState);
    	this.parser = parser;
	}
	public ID(): TerminalNode {
		return this.getToken(BasicTypescriptParser.ID, 0);
	}
	public parameters(): ParametersContext {
		return this.getTypedRuleContext(ParametersContext, 0) as ParametersContext;
	}
	public basicTypescript_list(): BasicTypescriptContext[] {
		return this.getTypedRuleContexts(BasicTypescriptContext) as BasicTypescriptContext[];
	}
	public basicTypescript(i: number): BasicTypescriptContext {
		return this.getTypedRuleContext(BasicTypescriptContext, i) as BasicTypescriptContext;
	}
    public get ruleIndex(): number {
    	return BasicTypescriptParser.RULE_functionDeclaration;
	}
	public enterRule(listener: BasicTypescriptListener): void {
	    if(listener.enterFunctionDeclaration) {
	 		listener.enterFunctionDeclaration(this);
		}
	}
	public exitRule(listener: BasicTypescriptListener): void {
	    if(listener.exitFunctionDeclaration) {
	 		listener.exitFunctionDeclaration(this);
		}
	}
	// @Override
	public accept<Result>(visitor: BasicTypescriptVisitor<Result>): Result {
		if (visitor.visitFunctionDeclaration) {
			return visitor.visitFunctionDeclaration(this);
		} else {
			return visitor.visitChildren(this);
		}
	}
}

